@@ -39,6 +39,8 @@ Changes in version 2.16.0
 
  * Fully qualify names in Hoogle instances output (#263)
 
+ * Output method documentation in Hoogle backend (#259)
+
 Changes in version 2.15.0
 
  * Always read in prologue files as UTF8 (#286 and Cabal #1721)
